--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <title>13 KB Game</title>
-<h1 id="blur">Tetris</h1>
-<h1>Tetris</h1>
 <canvas></canvas>
 <link rel="stylesheet" href="bundle.css" />
+<audio src="assets/pook.mp3"></audio>
 <script src="bundle.js"></script>
