--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,14 @@
-<title>13 KB Game</title>
-<canvas></canvas>
-<link rel="stylesheet" href="bundle.css" />
-<audio src="assets/pook.mp3"></audio>
-<script src="bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>113 kB Game</title>
+    <link rel="stylesheet" href="bundle.css" />
+  </head>
+  <body>
+    <canvas></canvas>
+    <audio src="assets/pook.mp3"></audio>
+    <script src="bundle.js"></script>
+  </body>
+</html>
